# Mochi

./: .gitignore  DOC_DELETION_ARCHIVE.md  Dockerfile.anchor  PRICE_MAPPING_GUIDE.md  PRICE_ORACLE_RUNBOOK.md  PROJECT_CONTEXT.md  Pokemon_price_tracker_doc.json  TECH_MANUAL.md  agent.md  buffer1.json  buffer2.json  buffer3.json  buffer4.json  buffer5.json  buffer6.json  buffer7.json  buffer8.json  buffer_latest.json  card_record_snapshot.txt  finish_minting.sh  package-lock.json  package.json  tsconfig.scripts.json
anchor-program/: Anchor.toml  Cargo.toml
anchor-program/idl/: mochi_seed_sale.json  mochi_v2_vault.json
anchor-program/patches/anchor-syn/src/idl/: defined.rs
anchor-program/patches/borsh_1_6_0/: Cargo.toml
anchor-program/patches/borsh_1_6_0/src/: schema.rs
anchor-program/patches/borsh_1_6_0/src/de/: mod.rs
anchor-program/patches/borsh_1_6_0/src/ser/: mod.rs
anchor-program/patches/toml_datetime/: Cargo.toml
anchor-program/patches/toml_edit/: Cargo.toml
anchor-program/patches/toml_parser/: Cargo.toml
anchor-program/programs/mochi_seed_sale/: Cargo.toml
anchor-program/programs/mochi_seed_sale/src/: lib.rs
anchor-program/programs/mochi_v2_vault/: Cargo.toml
anchor-program/programs/mochi_v2_vault/src/: lib.rs
backend/: debug_mint_authority.py  main.py  price_engine.py  requirements.txt  smart_price_scheduler.py  test_recycle_flow.py  tx_builder.py
docs/: AGENT_GUIDE.md  AGENT_UPDATE_LOG.md  ASSET_IMAGE_PIPELINE.md  FRONTEND_GACHA_GUIDE.md  GACHA_OPERATIONS.md  HANDOFF_PRICE_ORACLE.md  MAINNET_DEPLOYMENT.md  MIGRATION_V2.md  PRICING_GUIDE.md  TEMPLATE_STANDARD.md  TOKENOMICS_FLOW.md  TOKEN_MECHANICS_V2.md  UX_CHANGES.md  agent_anchor.md  agent_backend.md  agent_frontend.md  commands_devnet_setup.md  mcp_time.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
price_oracle/: README.md  config.json  ppt_mega_sets.json
proxy/: package-lock.json  package.json
scripts/: deploy_mochi_v2_distribution.latest.json  deploy_mochi_v2_distribution.py  deposit_core_assets.py  deposit_existing.ts  deposit_missing_cards.py  fetch_tcg_prices.py  generate_static_assets.py  import_card_templates.py  init_seed_sale.js  init_seed_sale_raw.js  map_prices.py  migrate_vault_state.ts  migrate_vault_state_raw.ts  (+11 more)
(+399 files in other folders)
