[workspace]
members = ["programs/mochi_v2_vault"]
resolver = "2"

[profile.release]
overflow-checks = true

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.17.17"
mpl-core = "0.7.2"
bytemuck = "1.14.0"
proc-macro2 = { version = "1.0.86", features = ["span-locations"] }

[patch.crates-io]
anchor-syn = { path = "patches/anchor-syn" }
