[package]
name = "mochi_v2_vault"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "mochi_v2_vault"

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["token", "associated_token"] }
solana-program = { workspace = true }
mpl-core = { workspace = true }
bytemuck = { workspace = true }

[features]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
